[gd_scene load_steps=4 format=3 uid="uid://bdkuavy38da7l"]

[ext_resource type="Script" path="res://scripts/Ui/levelRecordsScreen.gd" id="1_27hm5"]
[ext_resource type="Theme" uid="uid://iwupsatdtbhm" path="res://Ui elements/Themes/itemsMenu.tres" id="2_3gp0f"]
[ext_resource type="Texture2D" uid="uid://cagfyi3sw5v4w" path="res://Ui elements/Main menu/backgroundMenu.png" id="3_qt6g0"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_27hm5")

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_qt6g0")

[node name="LabelTemplate" type="Label" parent="."]
layout_mode = 2
offset_right = 1152.0
offset_bottom = 23.0
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Back" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_3gp0f")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HboxTemplate" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
